--- a/.github/workflows/reproduce.yml
+++ b/.github/workflows/reproduce.yml
@@ -3,13 +3,35 @@ name: reproduce-and-artifacts
 on:
   workflow_dispatch:
     inputs:
-      n_obs:          { description: "num obs", default: "40" }
-      grid:           { description: "grid size", default: "80" }
-      noise:          { description: "noise", default: "0.1" }
-      vx:             { description: "flow vx", default: "1.0" }
-      vy:             { description: "flow vy", default: "0.3" }
-      seed:           { description: "seed", default: "7" }
-      commit_outputs: { description: "commit artifacts back to repo", default: "false" }
+      n_obs:
+        description: "num obs"
+        required: false
+        default: "40"
+      grid:
+        description: "grid size"
+        required: false
+        default: "80"
+      noise:
+        description: "noise"
+        required: false
+        default: "0.1"
+      vx:
+        description: "flow vx"
+        required: false
+        default: "1.0"
+      vy:
+        description: "flow vy"
+        required: false
+        default: "0.3"
+      seed:
+        description: "seed"
+        required: false
+        default: "7"
+      commit_outputs:
+        description: "commit artifacts back to repo"
+        type: boolean
+        required: false
+        default: false
   push:
     branches: [ main ]
     paths:
@@ -21,45 +43,58 @@ on:
 jobs:
   run:
     runs-on: ubuntu-latest
+
+    # 允许写仓库内容（回写 artifacts）
     permissions:
       contents: write
-    steps:
-      - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v5
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0            # 允许 push 回 main
+          persist-credentials: true # 复用 GITHUB_TOKEN
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
           python-version: "3.10"
+          cache: "pip"
 
-      - name: Install deps
-        run: pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Clean outputs
         run: |
           rm -rf figures/* || true
           rm -f data/synth_points.csv data/grid_coords.csv data/grid_pred.csv data/flow_meta.json || true
-          # 如需强制重建海岸线，取消下一行注释
+          # 如需强制重新生成海岸线，取消下一行注释
           # rm -f data/malaysia_barrier.geojson || true
 
       - name: Generate data
+        shell: bash
         run: |
           python scripts/generate_synth.py \
-            --n_obs ${{ inputs.n_obs || 40 }} \
-            --grid  ${{ inputs.grid  || 80 }} \
-            --noise ${{ inputs.noise || 0.1 }} \
-            --vx    ${{ inputs.vx    || 1.0 }} \
-            --vy    ${{ inputs.vy    || 0.3 }} \
-            --seed  ${{ inputs.seed  || 7 }}
+            --n_obs "${{ inputs.n_obs || '40' }}" \
+            --grid  "${{ inputs.grid  || '80' }}" \
+            --noise "${{ inputs.noise || '0.1' }}" \
+            --vx    "${{ inputs.vx    || '1.0' }}" \
+            --vy    "${{ inputs.vy    || '0.3' }}" \
+            --seed  "${{ inputs.seed  || '7' }}"
 
-      - name: Baseline
+      - name: Run baseline
         run: python scripts/run_baseline.py --fast_loo --use_trend
 
-      - name: Physics-soft
+      - name: Run physics-soft
         run: python scripts/run_physics_soft.py --use_trend
 
-      - name: Upload artifact
+      - name: Upload artifact (zip)
         uses: actions/upload-artifact@v4
         with:
           name: pik_outputs-${{ github.run_number }}
+          if-no-files-found: warn
           path: |
             figures/*.png
             figures/metrics_physics_soft.json
@@ -67,19 +102,19 @@ jobs:
             data/grid_pred.csv
             data/malaysia_barrier.geojson
 
-      - name: Commit outputs to repo (optional)
-        if: ${{ github.event_name == 'workflow_dispatch' && inputs.commit_outputs == 'true' }}
+      - name: Commit artifacts back to repo
+        if: ${{ github.event_name == 'workflow_dispatch' && inputs.commit_outputs }}
+        shell: bash
         run: |
           ts=$(date +'%Y%m%d-%H%M%S')
           mkdir -p artifacts/$ts/figures artifacts/$ts/data
           cp -r figures/*.png artifacts/$ts/figures/ || true
-          cp -f figures/metrics_physics_soft.json figures/next_points.csv artifacts/$ts/figures/ || true
+          cp -f figures/metrics_physics_soft.json artifacts/$ts/figures/ || true
+          cp -f figures/next_points.csv artifacts/$ts/figures/ || true
           cp -f data/grid_pred.csv artifacts/$ts/data/ || true
           if [ -f data/malaysia_barrier.geojson ]; then cp -f data/malaysia_barrier.geojson artifacts/$ts/data/; fi
-          git config user.name  "github-actions"
-          git config user.email "github-actions@users.noreply.github.com"
+          git config user.name  "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add artifacts/$ts
           git commit -m "artifacts: physics-soft run $ts (auto)"
           git push
-permissions:
-  contents: write
