--- a/.github/workflows/reproduce-and-sweep.yml
+++ b/.github/workflows/reproduce-and-sweep.yml
@@ -2,121 +2,117 @@ name: reproduce-and-sweep
 
 on:
   workflow_dispatch:
+    inputs:
+      n_obs:   { description: "number of observations", default: "40" }
+      grid:    { description: "grid size",              default: "80" }
+      noise:   { description: "observation noise",      default: "0.1" }
+      vx:      { description: "flow vx",                default: "1.0" }
+      vy:      { description: "flow vy",                default: "0.3" }
+      seed:    { description: "random seed",            default: "7" }
+      push_to_artifacts_branch:
+        description: "push summary to 'artifacts' branch"
+        default: "false"
+
+permissions:
+  contents: write
 
 jobs:
-  setup-matrix:
+  setup:
     runs-on: ubuntu-latest
-    outputs:
-      lp_list: ${{ steps.set.outputs.lp_list }}
-      lc_list: ${{ steps.set.outputs.lc_list }}
     steps:
-      - id: set
-        run: |
-          echo "lp_list=[20,30,40]" >> $GITHUB_OUTPUT
-          echo "lc_list=[6,8,12]" >> $GITHUB_OUTPUT
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+          cache: "pip"
+      - run: pip install -r requirements.txt
 
   sweep-baseline:
-    needs: setup-matrix
+    needs: setup
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        lp: [20,30,40]
-        lc: [6,8,12]
-    name: sweep-baseline-lp${{ matrix.lp }}-lc${{ matrix.lc }}
+        lp: [20, 30, 40]
+        lc: [6, 8, 12]
+    name: baseline-lp${{ matrix.lp }}-lc${{ matrix.lc }}
     steps:
-      - uses: actions/checkout@v3
-
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
-          cache: 'pip'
-
-      - run: pip install -r requirements.txt
-
-      - name: Run baseline GP
+          python-version: "3.10"
+          cache: "pip"
+      - name: Generate data
         run: |
-          for i in 1 2 3; do
-            echo "::group::Attempt $i"
-            if python scripts/run_baseline.py \
-              --length_parallel ${{ matrix.lp }} \
-              --length_cross ${{ matrix.lc }} \
-              --alpha 1e-6 --fast_loo; then
-              echo "::endgroup::"
-              exit 0
-            fi
-            echo "::warning:: attempt $i failed, retrying..."
-            sleep 5
-          done
-          exit 1
-
-      - uses: actions/upload-artifact@v3
+          python scripts/generate_synth.py \
+            --n_obs ${{ inputs.n_obs }} --grid ${{ inputs.grid }} \
+            --noise ${{ inputs.noise }} --vx ${{ inputs.vx }} --vy ${{ inputs.vy }} \
+            --seed ${{ inputs.seed }}
+      - name: Run baseline
+        run: |
+          retry() { for i in 1 2 3; do "$@" && return 0 || sleep 5; done; return 1; }
+          retry python scripts/run_baseline.py \
+            --length_parallel ${{ matrix.lp }} \
+            --length_cross ${{ matrix.lc }} \
+            --alpha 1e-6 --fast_loo
+      - uses: actions/upload-artifact@v4
         with:
           name: baseline-lp${{ matrix.lp }}-lc${{ matrix.lc }}
           path: |
             figures/mean_map.png
             figures/std_map.png
             data/metrics.json
-          if-no-files-found: warn
 
   physics-soft:
+    needs: setup
     runs-on: ubuntu-latest
-    needs: setup-matrix
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
-          cache: 'pip'
+          python-version: "3.10"
+          cache: "pip"
       - run: pip install -r requirements.txt
-
-      - name: Run physics-informed GP
+      - name: Run physics soft GP
         run: |
           python scripts/run_physics_soft.py \
             --length_parallel_list 20 30 40 \
             --length_cross_list 6 8 12 \
             --lambda_phys 1.0 --kappa 1.0
-
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
           name: physics-soft
-          path: figures/phys_soft*.png
+          path: figures/
 
   aggregate:
-    runs-on: ubuntu-latest
     needs: [sweep-baseline, physics-soft]
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
-          cache: 'pip'
+          python-version: "3.10"
+          cache: "pip"
       - run: pip install pandas matplotlib seaborn
-
-      - name: Merge metrics + heatmap
-        run: |
-          mkdir -p agg
-          echo "Merging all metrics.json..."
-          python - <<'PY'
-          import json, pathlib, pandas as pd, matplotlib.pyplot as plt, seaborn as sns
-          rows=[]
-          for f in pathlib.Path("data").rglob("metrics.json"):
-              lp,lc=f.parts[-2].split("-lp")[1].split("-lc")
-              d=json.loads(open(f).read())
-              d.update({"lp":int(lp),"lc":int(lc)})
-              rows.append(d)
-          df=pd.DataFrame(rows)
-          df.to_csv("agg/all_metrics.csv",index=False)
-
-          # heatmap
-          pivot=df.pivot("lp","lc","RMSE")
-          plt.figure(figsize=(6,4))
-          sns.heatmap(pivot,annot=True,fmt=".3f",cmap="viridis")
-          plt.title("RMSE heatmap across length scales")
-          plt.savefig("agg/heatmap.png",dpi=150)
-          PY
-
-      - uses: actions/upload-artifact@v3
+      - uses: actions/download-artifact@v4
         with:
-          name: aggregate-results
-          path: agg/
+          path: artifacts
+      - name: Merge results & make heatmap
+        run: |
+          mkdir -p summary
+          python scripts/sweep_lengths.py --lp_list 20 30 40 --lc_list 6 8 12
+      - uses: actions/upload-artifact@v4
+        with:
+          name: sweep-summary
+          path: summary/
+      - name: Push to artifacts branch
+        if: ${{ inputs.push_to_artifacts_branch == 'true' }}
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git fetch origin
+          git switch artifacts || git switch --orphan artifacts
+          cp -r summary/* .
+          git add summary/
+          git commit -m "update artifacts from workflow run" || echo "no changes"
+          git push origin HEAD:artifacts
